--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
         </nav>
     </header>
     <section id="hero-outer">
-        
-        <div id="hero-image">
-
+        <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Love Running</h2>
+            <h3>Dublin Dockland & Phenix Park</h3>
         </div>
     </section>
     <section>
