--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
             <h3>Dublin Dockland & Phenix Park</h3>
         </div>
     </section>
-    <section>
-        club ethos
+    <section id="club-ethos">
+        <h1>Why Love Running With Us</h1>
+        <div id="left-about">left</div>
+        <div id="right-about">right</div>
+        <div id="center-about">center</div>
     </section>
     <section>
         running location, distance and times
