Add core html elements go gallery page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Love Running club for runners in Dublin, Ireland">
     <meta name="keywords" content="love running, running club, ireland, dublin">
@@ -23,7 +22,7 @@
                     <a href="#">Sgin Up</a>
                 </li>
                 <li>
-                    <a href="#">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
@@ -59,11 +58,8 @@
             </div>
         </div>
         <div id="right-about">
-
             <div class="right-about-heading">
-                <h2>
-                    Get Social <i class="fas fa-globe"></i>
-                </h2>
+                <h2>Get Social <i class="fas fa-globe"></i></h2>
                 <hr>
                 <p>
                     When we run with others, we can run farther and faster more easily. Social running can pull you out
@@ -71,9 +67,7 @@
                 </p>
             </div>
             <div class="right-about-heading">
-                <h2>
-                    Feel Strong <i class="fas fa-dumbbell"></i>
-                </h2>
+                <h2>Feel Strong <i class="fas fa-dumbbell"></i></h2>
                 <hr>
                 <p>
                     Running strengthens your heart by pumping blood more effectively through your body.
@@ -84,7 +78,6 @@
             <div id="circle-container">
                 <div id="circle-cover-bg"></div>
             </div>
-
         </div>
     </section>
     <section id="times">
@@ -127,16 +120,20 @@
     <footer>
         <ul class="social-networks">
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a> 
+                <a href="https://facebook.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a> 
             </li>
             <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+                <a href="https://twitter.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
             </li>
             <li>
-                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fab fa-youtube"></i></a>
+                <a href="https://youtube.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Youtube page (opens in a new tab)"><i class="fab fa-youtube"></i></a>
             </li>
             <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagrm page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+                <a href="https://instagram.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Instagrm page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
             </li>
         </ul>
     </footer>
